# MIST

./: .gitignore  LICENSE  MIST.py  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
jupyter/: example.ipynb  test.ipynb
jupyter/result_file/: GSE179994_GLIPH2.csv  IFN_response.xlsx
misc/: data.py  founction.py  loss.py  magic_modify.py  model.py  peformer_attention.py  scRNAlayer.py
mist/: __init__.py  data.py  founction.py  function.py  magic_modify.py  main.py
mist/doc/: imgt_pip_vdj(1).csv
mist/model/: __init__.py  dataset.py  main.py  metrics.py  model.py  peformer_attention.py  performer_attention.py  scRNAlayer.py  scTCRlayer.py  utils.py
