[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mist-tcr"
version = "1.0.0"
authors = [
  { name="Lai Wenpu", email="kyzy850520@163.com" },
]
description = "MIST: an interpretable and flexible deep learning framework for single-T cell transcriptome and receptor analysis"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
classifiers = [
    'Development Status :: 3 - Alpha',
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Intended Audience :: Science/Research",
    # "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "numpy>=1.21.6",
    "pandas>=1.3.5",
    "anndata>=0.8.0",
    "scipy>=1.7.3",
    "scikit-learn>=1.0.2",
    "scanpy>=1.9.3",
    "scirpy>=0.12.0",
    "torch>=1.13.0",
    "einops>=0.6.0",
    "tqdm>=4.64.1",
    "prefetch_generator>=1.0.3",
    "local-attention>=1.5.7",
    "leidenalg>=0.10.2"
]

[project.scripts]
MIST = "mist.main:main"

[tool.setuptools]
package-data = { "mist" = ["doc/*.csv"] }

[tool.setuptools.packages.find]
where = ["mist"]

[project.urls]
"Homepage" = "https://github.com/aapupu/MIST"

# [tool.hatch.build.targets.wheel]
# ignore-vcs = true
# include = [
#   "mist/**"
# ]
